--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your train!
+  h1  AUmento en Applaudos 2k en dolores y en el Idac un 30% 105k rico lejos!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
